# sl-mono

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yml
_vendor/: CMakeLists.txt
_vendor/catch2/: CMakeLists.txt
_vendor/glfw/: CMakeLists.txt
_vendor/glm/: CMakeLists.txt
_vendor/json/: CMakeLists.txt
_vendor/libuv/: CMakeLists.txt
_vendor/sqlite/: CMakeLists.txt
_vendor/sqlite/demo/: CMakeLists.txt  main.cpp
_vendor/unordered_dense/: .gitignore  CMakeLists.txt
_vendor/unordered_dense/demo/: CMakeLists.txt  main.cpp
_vendor/vulkan/: CMakeLists.txt  vulkan-version
_vendor/vulkan/inc/: vulkan.h
_vendor/vulkan/inc/spirv/: spirv_reflect.h
_vendor/vulkan/inc/vma/: vma.h
_vendor/vulkan/src/spirv/: spirv_reflect.c
_vendor/vulkan/src/vma/: vk_mem_alloc.h  vma.cpp
_vendor/vulkan/src/volk/: LICENSE  vk.h
cmake/: common.cmake  content.cmake  test.cmake
lib/: CMakeLists.txt
lib/sl-app/: CMakeLists.txt
lib/sl-app/examples/: win-bare.cpp  win-input.cpp
lib/sl-app/inc/win/: error.h  glfw-init.h  input-manager.h  window.h
lib/sl-core/: CMakeLists.txt
lib/sl-core/inc/config/: json.h
lib/sl-core/inc/io/: error.h  load.h  mapped-file.h
lib/sl-core/inc/io/unix/: mapped-file.h  mapped-view.h
lib/sl-core/inc/io/win/: mapped-file.h  mapped-view.h
lib/sl-core/inc/logging/: logger.h
lib/sl-core/inc/mem/: allocator.h
lib/sl-core/inc/utils/: deferred.h  enums.h  fs.h  io.h  lazy.h  noncopyable.h  pointers.h  strings.h  types.h  version.h
lib/sl-core/tests/: allocator-test.cpp  config-test.cpp  deferred-test.cpp  lazy-test.cpp  strings-test.cpp  strings_test.cpp
lib/sl-data/: CMakeLists.txt
lib/sl-data/examples/: play-demo.cpp
lib/sl-data/inc/sqlite/: command.h  database.h  error.h  init.h  transaction.h
lib/sl-uv/: CMakeLists.txt
lib/sl-uv/examples/: loop-demo.cpp
lib/sl-uv/inc/uv/: error.h  handle.h  idler.h  loop.h  signaler.h  timer.h
lib/sl-uv/tests/: idler-test.cpp  idler_test.cpp  timer-test.cpp  timer_test.cpp
lib/sl-vk/: CMakeLists.txt
lib/sl-vk/examples/: vk-compute.cpp  vk-init.cpp
lib/sl-vk/examples/assets/: mandelbrot.spv  square.spv
lib/sl-vk/examples/shaders/: mandelbrot.comp  square.comp
lib/sl-vk/inc/vk/: error.h
lib/sl-vk/inc/vk/compute/: context.h  program.h
lib/sl-vk/inc/vk/core/: app-context.h  base.h  debug-helpers.h  device-feature.h  device-resource.h  fixed-descriptor-cache.h  loader.h  logical-device.h  physical-device.h  resource-type.h  resource.h  resources.h  structs.h
lib/sl-vk/inc/vk/mem/: allocator.h  buffers.h  device-buffer.h  device-image.h  images.h  resources.h
lib/sl-vk/inc/vk/spv/: error.h  helpers.h  shader.h
lib/sl-vk/tests/core/: device-resource-test.cpp  resource-test.cpp
scripts/: install-local-cmake.sh  install-local-llvm.sh  prepare-build.sh
test/: runner.cpp
test/inc/test/: async.h
